fixing overflow

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-color: black;
   scroll-behavior: initial;
   overflow-x: hidden;
-  background: url("https://drive.google.com/uc?id=1AzuVM-676NYLrGdZfdn2YwRMtD4yvTmO");
+  background: url("https://drive.google.com/uc?id=1AzuVM-676NYLrGdZfdn2YwRMtD4yvTmO") no-repeat;
   /* background-size: cover; */
 }
 
